--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "formidable": "^1.2.2",
     "helmet": "^3.23.3",
     "jwks-rsa": "^1.8.1",
     "mongodb": "^3.6.0",
